--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,11 +34,13 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
             android:uiOptions="splitActionBarWhenNarrow">
+            <meta-data android:name="android.app.default_searchable"
+                android:value="com.intbridge.projects.projectgaucho" />
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.SEARCH" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
