--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.intbridge.projects.projectgaucho" >
+    package="com.intbridge.projects.projectgaucho"
+    android:versionCode="1"
+    android:versionName="0.7">
 
     <uses-sdk
         android:minSdkVersion="15"
