--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "21.1.1"
 
     defaultConfig {
-        applicationId "com.intbridge.projects.projectgaucho"
+        applicationId "com.intbridge.projects.gaucholife"
         minSdkVersion 15
         targetSdkVersion 21
-        versionCode 1
-        versionName "0.8"
+        versionCode 5
+        versionName "0.9"
     }
     buildTypes {
         release {
