--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'com.google.android.gms:play-services:6.1.71'
     compile 'com.jpardogo.materialtabstrip:library:1.1.0'
-    compile files ('libs/xmlwise-1_2.jar')
+    compile files('libs/xmlwise-1_2.jar')
+    compile files('libs/jsoup-1.8.3.jar')
 }
