1. IDE update to 1.3.1 2. Test: quickTest by robolectric 3. Database: Extract data from html by Jsoup

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.1.1"
+    buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "com.intbridge.projects.gaucholife"
@@ -23,7 +23,8 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'com.google.android.gms:play-services:6.1.71'
-    compile 'com.jpardogo.materialtabstrip:library:1.1.0'
     compile files('libs/xmlwise-1_2.jar')
     compile files('libs/jsoup-1.8.3.jar')
+    testCompile 'junit:junit:4.12'
+    testCompile "org.robolectric:robolectric:3.0"
 }
