--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'com.google.android.gms:play-services:6.1.71'
+    compile 'se.emilsjolander:stickylistheaders:2.7.0'
     compile files('libs/xmlwise-1_2.jar')
     compile files('libs/jsoup-1.8.3.jar')
     testCompile 'junit:junit:4.12'
