--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,8 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main" >
-            <intent-filter android:label="@string/title_activity_maps">
+            android:label="@string/title_activity_maps" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
