--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,9 @@ dependencies {
     compile files('libs/xmlwise-1_2.jar')
     compile files('libs/jsoup-1.8.3.jar')
     testCompile 'junit:junit:4.12'
-    testCompile "org.robolectric:robolectric:3.0"
+    testCompile 'org.robolectric:robolectric:3.0'
+    compile files('libs/Parse-1.10.1.jar')
+    compile files('libs/ParseCrashReporting-1.10.1.jar')
+    compile files('libs/bolts-android-1.2.1.jar')
+    compile files('libs/PPNS-1.10.1.jar')
 }
