--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.intbridge.projects.gaucholife" >
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -20,7 +21,8 @@
     <application
         android:name=".PGApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        tools:replace="android:icon"
+        android:icon="@drawable/pg_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
