--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     compile files('libs/ParseCrashReporting-1.10.1.jar')
     compile files('libs/bolts-android-1.2.1.jar')
     compile files('libs/PPNS-1.10.1.jar')
+    compile 'com.nineoldandroids:library:2.4.+'
+    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
 }
