--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
             android:screenOrientation="portrait">
         </activity>
 
-        <receiver android:name=".PGAlarmReceiver">
+        <receiver android:name=".utils.PGAlarmReceiver">
             <intent-filter>
                 <action android:name="android.media.action.DISPLAY_NOTIFICATION" />
                 <category android:name="android.intent.category.DEFAULT" />
