--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'se.emilsjolander:stickylistheaders:2.7.0'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.github.arimorty:floatingsearchview:1.1.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
