--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,5 @@ dependencies {
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.github.arimorty:floatingsearchview:1.1.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.zhy:autolayout:1.3.6'
+//    compile 'com.zhy:autolayout:1.3.6'
 }
