--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,13 +22,14 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.google.android.gms:play-services:7.0.0'
     testCompile 'org.robolectric:robolectric:3.0'
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.google.android.gms:play-services:8.4.0'
     compile 'se.emilsjolander:stickylistheaders:2.7.0'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.github.arimorty:floatingsearchview:1.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.tbouron.shakedetector:library:1.0.0@aar'
-    compile 'info.hoang8f:fbutton:1.0.5'
+    compile 'com.github.traex.rippleeffect:library:1.3'
+    compile 'com.android.support:support-v4:23.2.1'
 }
