--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 21
         versionCode 16
         versionName "2.2.2"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -23,7 +24,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
     testCompile 'org.robolectric:robolectric:3.0'
-    compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'se.emilsjolander:stickylistheaders:2.7.0'
     compile 'cn.pedant.sweetalert:library:1.3'
@@ -31,5 +31,4 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.tbouron.shakedetector:library:1.0.0@aar'
     compile 'com.github.traex.rippleeffect:library:1.3'
-    compile 'com.android.support:support-v4:23.2.1'
 }
