--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.tbouron.shakedetector:library:1.0.0@aar'
     compile 'com.github.traex.rippleeffect:library:1.3'
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
+
 }
