--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,7 @@
         </receiver>
 
         <service android:name="com.parse.PushService" />
-        <receiver android:name="com.parse.ParsePushBroadcastReceiver"
+        <receiver android:name="com.intbridge.projects.gaucholife.utils.PGParsePushReceiver"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.parse.push.intent.RECEIVE" />
@@ -87,8 +87,6 @@
                 <category android:name="com.intbridge.projects.gaucholife" />
             </intent-filter>
         </receiver>
-        <meta-data android:name="com.parse.push.notification_icon"
-            android:resource="@drawable/pg_launcher2"/>
 
     </application>
 
