Parse -> switch to heroku server Refactor -> using libs

--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        // For easyprefs library
+        maven { url "http://dl.bintray.com/pixplicity/maven" }
     }
 }
