--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.intbridge.projects.gaucholife"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 21
         versionCode 16
         versionName "2.2.2"
@@ -20,21 +20,36 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    //compile fileTree(include: ['*.jar'], dir: 'libs')
 
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.google.android.gms:play-services:7.0.0'
     testCompile 'org.robolectric:robolectric:3.0'
     compile files('libs/xmlwise-1_2.jar')
     compile files('libs/jsoup-1.8.3.jar')
-    compile files('libs/Parse-1.10.1.jar')
-    compile files('libs/ParseCrashReporting-1.10.1.jar')
-    compile files('libs/bolts-android-1.2.1.jar')
-    compile files('libs/PPNS-1.10.1.jar')
+//    compile files('libs/Parse-1.10.1.jar')
+//    compile files('libs/ParseCrashReporting-1.10.1.jar')
+//    compile files('libs/bolts-android-1.2.1.jar')
+//    compile files('libs/PPNS-1.10.1.jar')
+
+    // Backend
+    compile 'com.parse:parse-android:1.13.1'
+
+    // Shared Prefs
+    compile 'com.pixplicity.easyprefs:library:1.8.1@aar'
+
+    // UI
     compile 'se.emilsjolander:stickylistheaders:2.7.0'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.github.arimorty:floatingsearchview:1.1.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.tbouron.shakedetector:library:1.0.0@aar'
-    compile 'info.hoang8f:fbutton:1.0.5'
+
+    // Rx
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.6'
+    compile 'com.infstory:rxparse:2.0.3'
+
+    // DI
+    compile 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+
 }
